<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="budasuyasa.android.simplecrud.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="Register"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="Login"
        app:showAsAction="never" />
    <item
        android:id="@+id/Logout"
        android:orderInCategory="100"
        android:title="Logout"
        app:showAsAction="never" />
</menu>
